applications/media/qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: cr.hotio.dev/hotio/qbittorrent:release-4.5.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8118
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add: [ "NET_ADMIN" ]
          runAsGroup: 0
          runAsNonRoot: false
          runAsUser: 0
        volumeMounts:
        - mountPath: /app/qBittorrent/downloads
          name: downloads
        - mountPath: /config
          name: config
        - mountPath: /etc/cont-init.d/02-setup-wg
          name: setup-wg
          subPath: 02-setup-wg  # https://stackoverflow.com/a/39479928
        - mountPath: /config/wireguard
          name: wg-config
      restartPolicy: Always
#      securityContext:
#        sysctls:
#          - name: net.ipv4.conf.all.src_valid_mark
#            value: "1"
#          - name: net.ipv6.conf.all.disable_ipv6
#            value: "0"
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent-config
      - name: setup-wg
        configMap:
          name: qb-setup-wg
          defaultMode: 0777
      - name: wg-config
        secret:
          secretName: mullvad-wg-config
      - name: host-modules
        hostPath:
          path: /lib/modules
#---
#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    app: qbittorrent
#  name: qbittorrent
#spec:
#  ports:
#  - name: web
#    port: 8096
#    protocol: TCP
#    targetPort: 8096
#  selector:
#    app: qbittorrent
#  type: ClusterIP
