applications/media/stash.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stash
spec:
  selector:
    matchLabels:
      app: stash
  serviceName: stash
  replicas: 1
  template:
    metadata:
      labels:
        app: stash
    spec:
      hostNetwork: true
      containers:
      - name: stash
        image: stashapp/stash:v0.16.1
        ports:
        - containerPort: 9999
          name: http
        volumeMounts:
        - mountPath: /data
          name: stash-library
        - mountPath: /root/.stash
          name: stash-config
        - mountPath: /generated
          name: stash-generated
        - mountPath: /metadata
          name: stash-metadata
        - mountPath: /cache
          name: stash-cache
#        readinessProbe:
#          httpGet:
#            path: /api/v1/status
#            port: http
        resources:
          requests:
            cpu: "3"
            memory: 2Gi
          limits:
            cpu: "10"
            memory: 4Gi
      volumes:
      - name: stash-config
        persistentVolumeClaim:
          claimName: stash-config
      - name: stash-library
        persistentVolumeClaim:
          claimName: stash-library
      - name: stash-generated
        persistentVolumeClaim:
          claimName: stash-generated
      - name: stash-metadata
        persistentVolumeClaim:
          claimName: stash-metadata
      - name: stash-cache
        persistentVolumeClaim:
          claimName: stash-cache
---
apiVersion: v1
kind: Service
metadata:
  name: stash
spec:
  ports:
  - name: http
    port: 9999
    protocol: TCP
    targetPort: http
  selector:
    app: stash
  type: ClusterIP
