applications/media/ingress-noauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-noauth
spec:
  tls:
  - hosts:
      - jellyfin.jlh.name
    secretName: jellyfin-jlh-name-tls
  - hosts:
      - stash.jlh.name
    secretName: stash-jlh-name-tls
  rules:
  - host: jellyfin.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: web
  - host: stash.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stash
            port:
              name: http
