applications/media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
  - hosts:
      - radarr.jlh.name
    secretName: radarr-jlh-name-tls
  rules:
  - host: radarr.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: http
