applications/media/radarr.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  serviceName: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:4.5.1-develop
        ports:
        - containerPort: 7878
          name: http
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /movies
          name: media
#        readinessProbe:
#          httpGet:
#            path: /api/v1/status
#            port: http
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: media
        persistentVolumeClaim:
          claimName: media
      dnsConfig: # Fix DNS resolution in Alpine 3.11 https://github.com/kubernetes/kubernetes/issues/64924 https://github.com/gliderlabs/docker-alpine/issues/539
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: radarr
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.jlh.name/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.jlh.name/oauth2/start?rd=https://$host$escaped_request_uri"
  name: radarr
spec:
  tls:
    - hosts:
        - radarr.jlh.name
      secretName: radarr-jlh-name-tls
  rules:
    - host: radarr.jlh.name
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
